--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
                 </ul>
             </div>
             <div class="container content2">
-                <p id="time">09:43</p>
-                <p id="date">Saturday, Sept. 02</p>
+                <div class="datetime">
+                    <p id="time">09:43</p>
+                    <p id="date">Saturday, Sept. 02</p>
+                </div>
+                <img src="assets/medusa.png" alt="greek bust of medusa" />
             </div>
         </main>
     </body>
