--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
                 <h1>Hi, <span>Nate</span></h1>
                 <ul id="links">
                     <li>
-                        <a href="https://www.github.com/"><div>GitHub</div></a>
+                        <a href="https://www.gmail.com/"><div>Email</div></a>
                     </li>
                     <li>
-                        <a href="https://www.github.com/"><div>GitHub</div></a>
+                        <a href="https://www.calendar.google.com.com/"><div>Calendar</div></a>
                     </li>
                     <li>
-                        <a href="https://www.github.com/"><div>GitHub</div></a>
+                        <a href="https://www.todoist.com/"><div>ToDoist</div></a>
                     </li>
                     <li>
-                        <a href="https://www.github.com/"><div>GitHub</div></a>
+                        <a href="https://canvas.illinoisstate.edu/"><div>Canvas</div></a>
                     </li>
                     <li>
-                        <a href="https://www.github.com/"><div>GitHub</div></a>
+                        <a href="https://chat.openai.com/"><div>ChatGPT</div></a>
                     </li>
                     <li>
                         <a href="https://www.github.com/"><div>GitHub</div></a>
@@ -37,7 +37,7 @@
                     <p id="time">09:43</p>
                     <p id="date">Saturday, Sept. 02</p>
                 </div>
-                <img src="assets/medusa.png" alt="greek bust of medusa" />
+                <img src="assets/medusa.png" alt="greek bust of medusa" class="medusa"/>
             </div>
         </main>
     </body>
