--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <a href="https://www.gmail.com/"><div>Email</div></a>
                     </li>
                     <li>
-                        <a href="https://www.calendar.google.com.com/"><div>Calendar</div></a>
+                        <a href="https://www.calendar.google.com/"><div>Calendar</div></a>
                     </li>
                     <li>
                         <a href="https://www.todoist.com/"><div>ToDoist</div></a>
@@ -34,11 +34,12 @@
             </div>
             <div class="container content2">
                 <div class="datetime">
-                    <p id="time">09:43</p>
-                    <p id="date">Saturday, Sept. 02</p>
+                    <p id="time"></p>
+                    <p id="date"></p>
                 </div>
                 <img src="assets/medusa.png" alt="greek bust of medusa" class="medusa"/>
             </div>
         </main>
+        <script src="script.js"></script>
     </body>
 </html>
