--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <a href="https://www.gmail.com/"><div>Email</div></a>
                     </li>
                     <li>
-                        <a href="https://www.calendar.google.com/"><div>Calendar</div></a>
+                        <a href="https://calendar.google.com/"><div>Calendar</div></a>
                     </li>
                     <li>
                         <a href="https://www.todoist.com/"><div>ToDoist</div></a>
