feat: add Azure link

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                         <a href="https://www.todoist.com/"><div>ToDoist</div></a>
                     </li>
                     <li>
-                        <a href="https://canvas.illinoisstate.edu/"><div>Canvas</div></a>
-                    </li>
-                    <li>
                         <a href="https://chat.openai.com/"><div>ChatGPT</div></a>
                     </li>
                     <li>
                         <a href="https://www.github.com/"><div>GitHub</div></a>
+                    </li>
+                    <li>
+                        <a href="https://portal.azure.com/"><div>Azure</div></a>
                     </li>
                 </ul>
             </div>
